# edu-performance-tracker

./: .env.example  .gitignore  README.md  app.py  ingest_data.py  main.py  pyproject.toml  raw_education_data.parquet
dbt_edu/: dbt_project.yml  profiles.yml  profiles.yml.example
dbt_edu/models/: sources.yml  wide_education.sql
terraform/: main.tf  variables.tf
